# f4ether

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  memory.x
src/: main.rs
stm32f407/: Cargo.toml  build.rs
